# westfield

./: .gitignore  .travis.yml  README.md  build_ci.sh  index.js  package.json
app/: core.js  index.js  westfield-client-core.js  westfield-core.js  westfield-server-core.js
client/: westfield-client-core.js  westfield-client-core.spec.js
client/generator/: ProtocolArguments.js  ProtocolParser.js  index.spec.xml  package-lock.json  package.json  westfield-scanner-client.js
client/runtime/: index.js  package-lock.json  package.json  tsconfig.json  westfield-client-core.js  westfield-client-core.spec.js
client/runtime/build.config/: webpack.config.base.js  webpack.config.dev.js  webpack.config.prod.js
client/runtime/spec/support/: jasmine.json
client/runtime/src/: Display.js  Display.ts  Fixed.js  Proxy.js  RegistryEvents.js  RegistryProxy.js  SyncCallbackProxy.js  WebFS.js  WebFS.ts  WireFormat.js  index.ts  westfield-runtime-client.ts
client/runtime/src/protocol/: Proxy.js  index.ts
client/web/generator/: package.json
client/web/runtime/: package.json  tsconfig.json
client/web/runtime/src/: index.ts  westfield-runtime-client.ts
common/: index.js  package-lock.json  package.json  rollup.config.ts  tsconfig.json
common/src/: Connection.js  Connection.ts  Fixed.js  WebFD.js  WlObject.js  index.js
generator/: config.json  config.spec.json  index.js  index.spec.xml  westfield-scanner.js
protocol/: gf-web-buffer.xml  gr-web-gl.xml  web-shm.xml
server/: readme.md
server/java/: .gitignore  pom.xml  readme.md
server/java/westfield.server/: .gitignore  pom.xml  readme.md
server/java/westfield.server.example/: package.json  pom.xml  webpack.config.js
server/java/westfield.server.example/public.src/: compositor-client.js  westfield-client-example.js
server/java/westfield.server.runtime/: pom.xml
server/java/westfield.server/westfield.server.example/: pom.xml  readme.md
server/java/westfield.server/westfield.server.generator/: pom.xml
server/java/westfield.server/westfield.server.protocol/: pom.xml
server/java/westfield.server/westfield.server.runtime/: pom.xml
server/node/: package.json  readme.md
server/node/endpoint/: CMakeLists.txt  generate_patched_wayland_server.sh  index.js  package-lock.json  package.json
server/node/endpoint-generator/: package-lock.json  package.json
server/node/endpoint-generator/src/: EndpointProtocolArguments.js  EndpointProtocolParser.js  index.js
server/node/endpoint-native/: .gitignore  CMakeLists.txt  package-lock.json  package.json
server/node/endpoint-native/src/: connection.h  westfield-native.c  westfield-xwayland.c  westfield-xwayland.h
server/node/endpoint-native/src/wayland-server/: connection.c  wayland-os.c  wayland-server.c  wayland-version.h
server/node/endpoint-native/src/wayland-server/protocol/: wayland-server-protocol.h
server/node/endpoint/cmake/modules/: FindLibFFI.cmake
server/node/endpoint/native/: CMakeLists.txt  changes.diff  package.json
server/node/endpoint/native/src/: connection.h  wayland-server-core-extensions.h  wayland-server-core.h  wayland-server.c  wayland-util.c  westfield-native-old.c  westfield-native.c  westfield-xwayland.c
server/node/endpoint/native/src/wayland-server/: connection.c  wayland-server-core.h  wayland-server.c  wayland-shm.c  wayland-util.c  westfield-extra.h
server/node/endpoint/native/src/wayland-server/protocol/: wayland-protocol.c  wayland-server-protocol.h
server/node/endpoint/src/: Endpoint.js  FdUtils.js  Fixed.js  MessageInterceptor.js  NativeGlobalNames.js  RequestInterceptors.js  WireMessageUtil.js  index.js
server/node/endpoint/test/: EndpointSpec.js
server/node/example/: compositor-server.js  package.json
server/node/example.browserclient/: example.xml  node.js  nodeserver.js  package.json
server/node/example.browserclient/public/: index.html
server/node/example.browserclient/public.src/: browser.js
server/node/example.browserserver/: node.js  nodeclient.js  package-lock.json  package.json  webpack.config.js
server/node/example.browserserver/public.src/: browser.js
server/node/example.livestream/: compositor-server.js  package-lock.json  package.json  streams.xml  webpack.config.js
server/node/example.livestream/public/: index.html
server/node/example.livestream/public.src/: compositor-client.js
server/node/example.livestream/rtp-parser/: index.js  package-lock.json  package.json
server/node/example/public.src/: compositor-client.js
server/node/generator/: ProtocolArguments.js  ProtocolParser.js  package-lock.json  package.json  westfield-scanner-node.js  westfield-scanner-server.js
server/node/proxy/: .npmignore  CMakeLists.txt  package.json  tsconfig.json
server/node/proxy-generator/: package.json
server/node/proxy-generator/src/: EndpointProtocolParser.mjs
server/node/proxy/native/src/: addon.c  addon.h  drm-protocol.c  drm-protocol.h  linux-dmabuf-unstable-v1-protocol.c  linux-dmabuf-unstable-v1-protocol.h  westfield-buffer.h  westfield-dmabuf.c  westfield-dmabuf.h  westfield-drm.c  westfield-drm.h  westfield-egl.c  westfield-egl.h  westfield-fdutils.c  westfield-fdutils.h  westfield-linux-dmabuf-v1.c  westfield-linux-dmabuf-v1.h  westfield-native.c  westfield-surface.c  westfield-xwayland.c  westfield-xwayland.h  westfield.h  wlr_linux_dmabuf_v1.c
server/node/proxy/native/src/node-addon/: westfield-addon.c
server/node/proxy/native/src/wayland-server/: wayland-server.c  westfield-extra.h
server/node/proxy/src/: westfield-proxy-server.ts
server/node/proxy/src/@types/: westfield-addon.d.ts  westfield-native.d.ts
server/node/proxy/test/: proxy.spec.js
server/node/runtime/: index.js  package-lock.json  package.json  westfield-server-core.js
server/node/runtime-generator/: ProtocolArguments.js  ProtocolParser.js  package-lock.json  package.json
server/node/runtime/native/: CMakeLists.txt  (+1 more)
server/node/server/: westfield-server-core.js
server/web/runtime/: index.js  package-lock.json  package.json  tsconfig.json
spec/: westfield-client-core.spec.js
spec/support/: jasmine.json
(+171 files in other folders)
